--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 <body>
     <main>
         <header>
-            
-
+            <h1>Navegador web</h1>
+            <hr>
+            <p id="definicion">Un navegador web (en inglés, web browser) es un software, aplicaión o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos.</p>
+            <hr>
+            <p>La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
+            <h2>Ejemplos de navegadores web</h2>
+            <div class="navegador">
+            <p>Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS</p>
+            <p>Mozilla Firefox es un navegador web libre y de código abierto desarrollado para Linux, Android, iOS, macOs y Microsoft Windows coordinado por la Corporación Mozilla y la Fundación Mozilla</p>
+            <p>Google Chrome es un navegador web de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto</p>
+            </div>
         </header>
     </main>
 </body>
