--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
             <hr>
             <p>La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
             <h2>Ejemplos de navegadores web</h2>
-            <div class="navegador">
-            <p>Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS</p>
-            <p>Mozilla Firefox es un navegador web libre y de código abierto desarrollado para Linux, Android, iOS, macOs y Microsoft Windows coordinado por la Corporación Mozilla y la Fundación Mozilla</p>
-            <p>Google Chrome es un navegador web de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto</p>
-            </div>
+            <p class="navegador">Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS</p>
+            <p class="navegador">Mozilla Firefox es un navegador web libre y de código abierto desarrollado para Linux, Android, iOS, macOs y Microsoft Windows coordinado por la Corporación Mozilla y la Fundación Mozilla</p>
+            <p class="navegador">Google Chrome es un navegador web de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto</p>
         </header>
     </main>
 </body>
