--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-            <h1>Navegador web</h1>
+            <h1>Navegadores web</h1>
             <hr>
             <p id="definicion">Un navegador web (en inglés, web browser) es un software, aplicaión o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos.</p>
             <hr>
