--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1>Navegadores web</h1>
             <hr>
-            <p id="definicion">Un navegador web (en inglés, web browser) es un software, aplicaión o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos.</p>
+            <p id="definicion">Un navegador web (en inglés, web browser) es un software, aplicación o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos.</p>
             <hr>
             <p>La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
             <h2>Ejemplos de navegadores web</h2>
